# libycres

./: .clang-tidy  .codechecker.json  .codechecker.skipfile  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  codechecker.yml  valgrind.yml
examples/undat/include/: undat.h
examples/undat/include/extract/: extract.h
examples/undat/include/filesystem/: filesystem.h
examples/undat/include/iterate/: iterate.h
examples/undat/include/platform/: platform.h
examples/undat/include/print/: print.h
examples/undat/include/private/: extract.h  print.h
examples/undat/sources/: main.c
examples/undat/sources/extract/: extract.c
examples/undat/sources/filesystem/: filesystem.c
examples/undat/sources/iterate/: iterate.c
examples/undat/sources/platform/: platform.c
examples/undat/sources/print/: print.c
examples/undat/sources/private/extract/: extract.c
examples/undat/sources/private/print/: print.c
examples/ycifrm/: CMakeLists.txt
examples/ycifrm/include/: ycifrm.h
examples/ycifrm/source/: main.c
examples/ycilst/: CMakeLists.txt
examples/ycilst/include/: ycilst.h
examples/ycilst/source/: main.c
examples/ycimap/: CMakeLists.txt
examples/ycimap/include/: ycimap.h
examples/ycimap/source/: main.c
examples/ycimsg/: CMakeLists.txt
examples/ycimsg/include/: ycimsg.h
examples/ycimsg/source/: main.c
examples/ycipal/: CMakeLists.txt
examples/ycipal/include/: ycipal.h
examples/ycipal/source/: main.c
examples/ycipro/: CMakeLists.txt
examples/ycipro/include/: ycipro.h
examples/ycipro/source/: main.c
examples/ycundat/: CMakeLists.txt
examples/ycundat/include/: main.h  ycundat.h
examples/ycundat/source/: main.c
include/: libycres.h
include/dat/: dat.h
include/dat/callbacks/: callbacks.h
include/dat/methods/: methods.h
include/dat/statuses/: statuses.h
include/dat/types/: types.h
include/formats/: formats.h
include/formats/dat/: dat.h
include/frm/: frm.h
include/frm/callbacks/: callbacks.h
include/frm/methods/: methods.h
include/frm/statuses/: statuses.h
include/frm/types/: types.h
include/io/: io.h
include/io/types/: types.h
include/lst/: lst.h
include/lst/methods/: methods.h
include/lst/statuses/: statuses.h
include/lst/types/: types.h
include/map/: map.h
include/map/methods/: methods.h
include/map/statuses/: statuses.h
include/map/types/: types.h
include/map/types/elevation/: elevation.h
include/map/types/level/: level.h
include/map/types/level/exit/: exit.h
include/map/types/level/object/: object.h
include/map/types/level/objects/: objects.h
include/map/types/level/tiles/: tiles.h
include/map/types/script/: script.h
include/map/types/script/spatial/: spatial.h
include/map/types/script/timed/: timed.h
include/map/types/variables/: variables.h
include/math/: math.h
include/math/methods/: methods.h
include/math/types/: types.h
include/msg/: msg.h
include/msg/methods/: methods.h
include/msg/statuses/: statuses.h
include/msg/types/: types.h
include/pal/: pal.h
include/pal/callbacks/: callbacks.h
include/pal/methods/: methods.h
include/pal/statuses/: statuses.h
include/pal/types/: types.h
include/platform/: platform.h
include/pro/: pro.h
include/pro/callbacks/: callbacks.h
include/pro/methods/: methods.h
include/pro/statuses/: statuses.h
include/pro/types/: types.h
include/pro/types/common/: common.h
include/pro/types/common/caliber/: caliber.h
include/pro/types/common/damage/: damage.h
include/pro/types/common/destination/: destination.h
include/pro/types/common/flags/: flags.h
include/pro/types/common/gender/: gender.h
include/pro/types/common/lighting/: lighting.h
include/pro/types/common/material/: material.h
include/pro/types/common/perk/: perk.h
include/pro/types/common/skill/: skill.h
include/pro/types/common/stat/: stat.h
include/pro/types/lighting/: lighting.h
include/pro/types/material/: material.h
include/pro/types/object/: entity.h  flags.h  object.h
include/pro/types/object/critter/: critter.h
include/pro/types/object/flags/: flags.h
include/pro/types/object/item/: item.h
include/pro/types/object/misc/: misc.h
include/pro/types/object/scenery/: scenery.h
include/pro/types/object/tile/: tile.h
include/pro/types/object/wall/: wall.h
include/pro/types/script/: script.h
private/: private.h
private/byteorder/: byteorder.h
private/formats/: formats.h
private/formats/dat/: dat.h
private/formats/dat/flat/: flat.h
private/formats/dat/load/: load.h
private/formats/dat/lzss/: lzss.h
source/common/: byteorder.c  yc_res_common_byteorder.c  yc_res_common_math.c
source/formats/dat/: dat.c  yc_res_dat_extract.c  yc_res_dat_invalidate.c  yc_res_dat_parse.c
source/formats/dat/extract/: yc_res_dat_extract.c  yc_res_dat_extract.h
source/formats/dat/methods/: yc_res_dat_extract.c  yc_res_dat_free.c  yc_res_dat_invalidate.c  yc_res_dat_methods.c  yc_res_dat_parse.c
source/formats/frm/: yc_res_frm_invalidate.c  yc_res_frm_merge.c  yc_res_frm_parse.c
source/formats/lst/: yc_res_lst_invalidate.c  yc_res_lst_parse.c
source/formats/map/: yc_res_map_invalidate.c  yc_res_map_parse.c  yc_res_map_parse.h
source/formats/map/object/: yc_res_map_parse_object.c  yc_res_map_parse_object.h
source/formats/map/object/patch/: yc_res_map_parse_object_patch.h  yc_res_map_parse_object_patch_critter.c  yc_res_map_parse_object_patch_item.c  yc_res_map_parse_object_patch_misc.c  (+1 more)
source/formats/map/script/: yc_res_map_parse_script.c  yc_res_map_parse_script.h
source/formats/msg/: yc_res_msg_invalidate.c  yc_res_msg_parse.c
source/formats/pal/methods/: yc_res_pal_parse.c  yc_res_pal_transparency.c
source/formats/pro/: yc_res_pro_entity.c  yc_res_pro_fid_operations.c  yc_res_pro_ids.c  yc_res_pro_idxes.c  yc_res_pro_index.c  yc_res_pro_invalidate.c  yc_res_pro_parse.c  yc_res_pro_types.c
source/formats/pro/parse/: yc_res_pro_parse_object.c  yc_res_pro_parse_object.h
sources/dat/: dat.c
sources/formats/dat/: dat.c  dat.h  flat.c  load.c  lzss.c  private.c
(+58 files in other folders)
